19/02/2015:
	- Added missing <cctype> include in URL.h and replaced pow(2.0,x) with bit shifting in
	  KakaduImage.cc and View.cc. Now compiles cleanly with VisualStudio Express.


09/01/2015:
	- Better logging for exceptions in Main.cc


27/11/2014:
	- Added new magic identifier for BigTIFF images to IIPImage.cc


25/11/2014:
	- Fix of rounding error problem in View.cc for calculating resolution level.
	- Fix to IIIF.cc to properly handle resolution 0 requests.


24/11/2014:
	- Fix to TileManager.cc to properly calculate tile height for final row.
	- Updates to IIIF code to ensure tiles are properly detected.
	- Changes to View class to calculate regions from full resolution image.


24/10/2014:
	- Updated MINMAX command syntax in Task.cc to channel:min,max


22/10/2014:
	- Updated KakaduImage.cc to use Kakadu namespaces in version 7.5 and greater.


05/09/2014:
	- Updated IIIF info.json output to be compliant with changed IIIF 2.0 specification.


03/09/2014:
	- Fix to IIPImage.cc for file type detection for multispectral sequences.


22/08/2014:
	- Fix to properly read 12 bit JP2 files.
	- KakaduImage's virtual_levels counter moved into IIPImage class.
	- Modification to properly read number of components in multi-band JPEG2000 images.


21/08/2014:
	- Fixes to allow compilation on older versions of gcc.


20/08/2014:
	- Cleanup to IIIF code and some cosmetic improvements to generated JSON.
	- Added string escape function to URL class and moved all environment variable access to
	  Main.cc.


19/08/2014:
	- Added aspect ratio flag in View.h for use in CVT.cc. Also cleaned up Main.cc to remove
	  unnecesary logging and record extra http headers.
	- Added IIIF protocol version 2.0 support via the IIIF argument.


13/08/2014:
	- The rotate filter only ever operates on 8bit data, so remove if else type statements from
	  function - increases average function speed by about around 15%.
	- Added missing URL.h to src/Makefile.am.